--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,67 +7,76 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <div class ="container">
 
-    <div class="jumbotron">
-      <h1>gCamp</h1>
-      <p>Your life, organized</p>
-    </div>
+
+      <div class="jumbotron">
+        <h1>gCamp</h1>
+        <p>Your life, organized</p>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture406-620x413.jpg" alt="http://placekitten.com/200/300">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="http://www.imcreator.com/wp-content/uploads/2013/09/8785445626_587fdac14d_b.jpg" alt="http://placekitten.com/200/300">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture415-620x413.jpg" alt="http://placekitten.com/200/300">
+          </div>
+        </div>
+      </div>
 
     <div class="row">
       <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <img src="https://farm9.staticflickr.com/8482/8203794182_8004f8f636_m.jpg" alt="http://placekitten.com/200/300">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Tasks</h3>
+          </div>
+          <div class="panel-body">
+            Grouped by projects and lists.  Just the way you like 'em'
+          </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <img src="https://farm8.staticflickr.com/7150/6477358187_dbfa1087fb_m.jpg" alt="http://placekitten.com/200/300">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Documents</h3>
+          </div>
+          <div class="panel-body">
+            <ul>
+              <li>Upload</li>
+              <li>Comment</li>
+              <li>Revise</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <img src="https://farm4.staticflickr.com/3832/8865584540_b5307795be_m.jpg" alt="http://placekitten.com/200/300">
-        </div>
-      </div>
-    </div>
-
-  <div class="row">
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Tasks</h3>
-        </div>
-        <div class="panel-body">
-          Grouped by projects and lists.  Just the way you like 'em'
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Documents</h3>
-        </div>
-        <div class="panel-body">
-          <ul>
-            <li>Upload</li>
-            <li>Comment</li>
-            <li>Revise</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Comments</h3>
-        </div>
-        <div class="panel-body">
-          This is some text
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Comments</h3>
+          </div>
+          <div class="panel-body">
+            <ul>
+              <li>
+                Comment on tasks and documents
+              </li>
+              <li>
+                Get email notification
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
 
   </body>
 </html>
