--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GCampLaunch</title>
+  <title>GCamp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<div class="container">
+  <body>
 
-  <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">gCamp</a>
-      </div>
-  </nav>
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/home">gCamp</a>
+        </div>
+    </nav>
 
-<%= yield %>
+    <%= yield %>
+  </body>
 
 
+    <div class="container">
+      <div class="footer footer-fixed-bottom">
+          <%= link_to 'About', about_path %>
+          |
+          <%= link_to 'Terms', terms_path %>
+        </div>
+    </div>
 
-</body>
+
+</div>
+
+
 </html>
