--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GCampLaunch</title>
+    <title>GCamp</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -76,7 +76,20 @@
         </div>
       </div>
     </div>
+    <ul>
+      "Failure is not an option.  Everyone has to Succeed." -Arnold Schwarzenegger
+    </ul>
+    <ul>
+      "Your time is limited, so don't waste it living someone else's life." -Steve Jobs
+    </ul>
+    <ul>
+      "Better Ingredients, Better Pizza" -Papa John's.
+    </ul>
   </div>
+
+
+
+
 
   </body>
 </html>
