--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <%= yield %>
   </body>
 
-
+  <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
     <div class="container">
       <div class="footer footer-fixed-bottom">
           <%= link_to 'About', about_path %>
@@ -34,6 +34,7 @@
           <%= link_to 'Terms', terms_path %>
         </div>
     </div>
+  </nav>
 
 
 </div>
