--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -9,7 +9,6 @@
   <body>
     <div class ="container">
 
-
       <div class="jumbotron">
         <h1>gCamp</h1>
         <p>Your life, organized</p>
@@ -33,58 +32,58 @@
         </div>
       </div>
 
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Tasks</h3>
+      <div class="row">
+        <div class="col-sm-6 col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Tasks</h3>
+            </div>
+            <div class="panel-body">
+              Grouped by projects and lists.  Just the way you like 'em'
+            </div>
           </div>
-          <div class="panel-body">
-            Grouped by projects and lists.  Just the way you like 'em'
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Documents</h3>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li>Upload</li>
+                <li>Comment</li>
+                <li>Revise</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Comments</h3>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li>
+                  Comment on tasks and documents
+                </li>
+                <li>
+                  Get email notification
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Documents</h3>
-          </div>
-          <div class="panel-body">
-            <ul>
-              <li>Upload</li>
-              <li>Comment</li>
-              <li>Revise</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Comments</h3>
-          </div>
-          <div class="panel-body">
-            <ul>
-              <li>
-                Comment on tasks and documents
-              </li>
-              <li>
-                Get email notification
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+
+
+        <% @quotes.each do |quote| %>
+          <ul class="list-unstyled">
+            <%= quote %>
+          </ul>
+        <% end %>
+    
     </div>
-
-
-    <% @quotes.each do |quote| %>
-      <ul>
-        <%= quote %>
-      </ul>
-    <% end %>
-
-
 
 
   </body>
