--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
 
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container-fluid">
+      <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -21,12 +21,13 @@
           </button>
           <a class="navbar-brand" href="/home">gCamp</a>
         </div>
+      </div>
     </nav>
 
     <%= yield %>
   </body>
 
-  <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+  
     <div class="container">
       <div class="footer footer-fixed-bottom">
           <%= link_to 'About', about_path %>
@@ -34,7 +35,7 @@
           <%= link_to 'Terms', terms_path %>
         </div>
     </div>
-  </nav>
+
 
 
 </div>
