--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -38,7 +38,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Tasks</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-body" style ="height:90px">
               Grouped by projects and lists.  Just the way you like 'em'
             </div>
           </div>
@@ -48,7 +48,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Documents</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-body" style ="height:90px">
               <ul>
                 <li>Upload</li>
                 <li>Comment</li>
@@ -62,7 +62,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Comments</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-body" style ="height:90px">
               <ul>
                 <li>
                   Comment on tasks and documents
@@ -78,11 +78,13 @@
 
 
         <% @quotes.each do |quote| %>
-          <ul class="list-unstyled">
-            <%= quote %>
-          </ul>
+          <% quote.each do |x| %>
+            <ul class="list-unstyled">
+              <%= x %>
+            </ul>
+          <% end %>
         <% end %>
-    
+
     </div>
 
 
