--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,6 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="/home">gCamp</a>
         </div>
       </div>
@@ -27,15 +21,19 @@
     <%= yield %>
   </body>
 
-  
-    <div class="container">
-      <div class="footer footer-fixed-bottom">
-          <%= link_to 'About', about_path %>
-          |
-          <%= link_to 'Terms', terms_path %>
-        </div>
-    </div>
 
+    <hr>
+      <div class="container">
+        <footer class="footer footer-fixed-bottom">
+
+          <p>  <%= link_to 'About', about_path %>
+            |
+            <%= link_to 'Terms', terms_path %>
+          </p>
+          
+        </footer>
+      </div>
+    </hr>
 
 
 </div>
