--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div class ="container">
+
 
       <div class="jumbotron">
         <h1>gCamp</h1>
@@ -22,7 +22,7 @@
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="http://www.imcreator.com/wp-content/uploads/2013/09/8785445626_587fdac14d_b.jpg" alt="http://placekitten.com/200/300">
+            <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture340-620x413.jpg" alt="http://placekitten.com/200/300">
           </div>
         </div>
         <div class="col-sm-6 col-md-4">
@@ -39,7 +39,7 @@
               <h3 class="panel-title">Tasks</h3>
             </div>
             <div class="panel-body" style ="height:90px">
-              Grouped by projects and lists.  Just the way you like 'em'
+              Grouped by projects and lists.  Just the way you like 'em
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
           <% end %>
         <% end %>
 
-    </div>
+
 
 
   </body>
