added FAQs page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,11 @@
           <p>  <%= link_to 'About', about_path %>
             |
             <%= link_to 'Terms', terms_path %>
+            |
+
+            <%= link_to 'FAQ', faqs_path %>
           </p>
-          
+
         </footer>
       </div>
     </hr>
