--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
     <hr>
       <div class="container">
-        <footer class="footer footer-fixed-bottom">
+        <footer>
 
           <p>  <%= link_to 'About', about_path %>
             |
