--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,25 +1,29 @@
-<h1>Listing tasks</h1>
+<div class="page-header">
+  <%= link_to 'New Task', new_task_path, class: "btn btn-info pull-right"  %>
+  <h1>Tasks</h1>
+</div>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
         <td><%= task.description %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <div class = "pull-right">
+            <%= link_to 'Show', task, class:"btn btn-success" %>
+            <%= link_to 'Edit', edit_task_path(task), class:"btn btn-info" %>
+            <%= link_to 'Destroy', task, class:"btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Task', new_task_path %>
