--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@task) do |f| %>
+<%= form_for @task, html: {class: "form-horizontal"} do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,11 +11,20 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+
+  <div class="form-group">
+    <%= f.label :description, class: "col-sm-1 control-label" %>
+      <div class="col-sm-4">
+        <%= f.text_field :description, class: "form-control" %>
+      </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <div class="form-group">
+      <div class="actions">
+        <div class="col-sm-offset-1 col-sm-11">
+          <%= f.submit class: "btn btn-primary"%>
+          <%= link_to "Cancel", tasks_path, class:"btn btn-default" %>
+        </div>
+      </div>
+    </div>
+
 <% end %>
