--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,14 @@
       <div class="container">
         <footer>
 
-          <p>  <%= link_to 'About', about_path %>
+          <p>
+            <%= link_to 'About', about_path %>
             |
             <%= link_to 'Terms', terms_path %>
             |
-
             <%= link_to 'FAQ', faqs_path %>
+            |
+            <%= link_to 'Tasks', tasks_path %>
           </p>
 
         </footer>
