--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,7 +22,7 @@
       <div class="actions">
         <div class="col-sm-offset-1 col-sm-11">
           <%= f.submit class: "btn btn-primary"%>
-          <%= link_to "Cancel", tasks_path, class:"btn btn-default" %>
+          <%= link_to "Cancel", @returnpath, class:"btn btn-default" %>
         </div>
       </div>
     </div>
