--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,7 +22,8 @@
   <% if params[:action] == "edit" %>
       <div class="form-group">
         <div class="col-sm-offset-1 col-sm-11">
-          <input type="checkbox"> Active
+          <%= f.check_box :completed %>
+          <%= f.label :completed, class: "control-label" %>  
         </div>
       </div>
   <% end %>
