--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,13 +7,16 @@
   <thead>
     <tr>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th>Completed</th>
+      
+
     </tr>
   </thead>
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
         <td><%= task.description %></td>
+        <td><%= task.completed %></td>
         <td>
           <div class = "pull-right">
             <%= link_to 'Show', task, class:"btn btn-success" %>
