--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -17,17 +17,17 @@
       <div class="row">
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture406-620x413.jpg" alt="http://placekitten.com/200/300">
+            <%= image_tag 'picture2.jpg' %>
           </div>
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture340-620x413.jpg" alt="http://placekitten.com/200/300">
+            <%= image_tag 'picture3.jpg' %>
           </div>
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture415-620x413.jpg" alt="http://placekitten.com/200/300">
+            <%= image_tag 'picture4.jpg' %>
           </div>
         </div>
       </div>
