--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -19,11 +19,18 @@
       </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :due_date, class: "col-sm-1 control-label" %>
+      <div class="col-sm-2">
+        <%= f.date_field :due_date, class: "form-control" %>
+      </div>
+  </div>
+
   <% if params[:action] == "edit" %>
       <div class="form-group">
         <div class="col-sm-offset-1 col-sm-11">
           <%= f.check_box :completed %>
-          <%= f.label :completed, class: "control-label" %>  
+          <%= f.label :completed, class: "control-label" %>
         </div>
       </div>
   <% end %>
