--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,11 @@
 <div class="page-header">
-  <%= link_to 'New Task', new_task_path, class: "btn btn-info pull-right"%>
+  <div class="pull-right">
+  
+    <%= link_to 'All', @task %>
+    |
+    <%= link_to 'Incomplete', (filter_params({completed: false})) %>
+    <%= link_to 'New Task', new_task_path, class: "btn btn-info"%>
+  </div>
   <h1>Tasks</h1>
 </div>
 
