--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,10 @@ body {
   padding-top: 60px;
 }
 
-
+.active-link {
+  color: black;
+  pointer-events: none;
+}
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
