--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
             <%= link_to 'FAQ', faqs_path %>
             |
             <%= link_to 'Tasks', tasks_path %>
+            |
+            <%= link_to 'Users', users_path %>
           </p>
 
         </footer>
