--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice">
-  <div class="alert alert-success" role="alert">
-    <%= notice %>
-  </div>
-</p>
+
+
+<%= link_to 'Back', users_path %>
