--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,13 +12,11 @@
   <% end %>
 
   <div class = "form-group">
-    <%= f.label :first_name, class: "col-sm-2" %>
+    <%= f.label :first_name, class:"col-sm-2"%>
     <div class="col-sm-4">
       <%=f.text_field :first_name, class: "form-control"%>
     </div>
   </div>
-
-
 
   <div class = "form-group">
     <%= f.label :last_name, class: "col-sm-2"%>
@@ -38,7 +36,7 @@
     <div class="actions">
       <div class = "col-sm-offset-2 col-sm-10">
         <%=f.submit class:"btn btn-primary"%>
-        <%= link_to "Cancel", @user, class: "btn btn-default" %>
+        <%= link_to "Cancel", users_path, class: "btn btn-default" %>
       </div>
     </div>
   </div>
