--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
 
 
     <hr>
-      <div class="container">
-        <footer>
+
+        <footer class = "navbar navbar-fixed-bottom container">
 
           <p>
             <%= link_to 'About', about_path %>
@@ -39,7 +39,7 @@
           </p>
 
         </footer>
-      </div>
+
     </hr>
 
 
