--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class = "form-group">
     <%= f.label :first_name, class:"col-sm-2"%>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <%=f.text_field :first_name, class: "form-control"%>
     </div>
   </div>
@@ -40,6 +40,4 @@
       </div>
     </div>
   </div>
-
-
 <% end %>
