--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,15 @@
 <div class="page-header">
   <h1>Edit User</h1>
 </div>
-<%= render 'form' %>
+
+  <%= render 'form' %>
+
+<div class="form-group">
+  <div class="actions">
+    <div class="col-sm-offset-2 col-sm-7">
+      <div class="well col-md-6">
+        <center><%= link_to('Delete', user_path, class:"btn btn-danger", method: :delete) %></center>
+      </div>
+    </div>
+  </div>
+</div>
