--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
-<p id="notice">
+<% if notice %>
   <div class="alert alert-success" role="alert">
-    <%= notice %>
+    <p id="flash"><%= notice %></p>
   </div>
-</p>
+<% end %>
 
 <div class="page-header">
   <div class="pull-right">
@@ -22,7 +22,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.first_name %> <%= user.last_name%></td>
+        <td><%= link_to user.first_name, user %> <%= link_to user.last_name%></td>
         <td><%= mail_to user.email %></td>
         <td>
           <div class= "pull-right">
