--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,8 @@
             <%= link_to 'Tasks', tasks_path %>
             |
             <%= link_to 'Users', users_path %>
+            |
+            <%= link_to 'Projects', projects_path %>
           </p>
 
         </footer>
