--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,3 +3,11 @@
     <p id="flash"><%= notice %></p>
   </div>
 <% end %>
+
+<div class="header">
+  <div class = "pull-right">
+    <%= link_to "Edit", edit_project_path(@project), class: "btn btn-info"%>
+    <%= link_to('Delete', project_path, class:"btn btn-danger", method: :delete) %>
+  </div>
+  <h1><%= @project.name %></h1>
+</div>
