--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,47 +1,54 @@
 <%= form_for @task, html: {class: "form-horizontal"} do |f| %>
   <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+    <div class="row">
+      <div id="error_explanation", class = "alert alert-danger col-sm-offset-1 col-sm-6" role="alert">
+        <h4><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h4>
 
-      <ul>
-      <% @task.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @task.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-
-  <div class="form-group">
-    <%= f.label :description, class: "col-sm-1 control-label" %>
-      <div class="col-sm-4">
-        <%= f.text_field :description, class: "form-control" %>
-      </div>
+  <div class = "row">
+    <div class="form-group">
+      <%= f.label :description, class: "col-sm-1 control-label" %>
+        <div class="col-sm-4">
+          <%= f.text_field :description, class: "form-control" %>
+        </div>
+    </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :due_date, class: "col-sm-1 control-label" %>
-      <div class="col-sm-2">
-        <%= f.date_field :due_date, class: "form-control" %>
-      </div>
+  <div class="row">
+    <div class="form-group">
+      <%= f.label :due_date, class: "col-sm-1 control-label" %>
+        <div class="col-sm-2">
+          <%= f.date_field :due_date, class: "form-control" %>
+        </div>
+    </div>
   </div>
 
   <% if params[:action] == "edit" %>
-      <div class="form-group">
-        <div class="col-sm-offset-1 col-sm-11">
-          <%= f.check_box :completed %>
-          <%= f.label :completed, class: "control-label" %>
-        </div>
+      <div class="row">
+        <div class="form-group">
+          <div class="col-sm-offset-1 col-sm-11">
+            <%= f.check_box :completed %>
+            <%= f.label :completed, class: "control-label" %>
+          </div>
       </div>
   <% end %>
 
-  <div class="form-group">
-      <div class="actions">
-        <div class="col-sm-offset-1 col-sm-11">
-          <%= f.submit class: "btn btn-primary"%>
-          <%= link_to "Cancel", @returnpath, class:"btn btn-default" %>
+  <div class="row">
+    <div class="form-group">
+        <div class="actions">
+          <div class="col-sm-offset-1 col-sm-11">
+            <%= f.submit class: "btn btn-primary"%>
+            <%= link_to "Cancel", @returnpath, class:"btn btn-default" %>
+          </div>
         </div>
       </div>
-    </div>
-
+  </div>
 <% end %>
