--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,28 +1,34 @@
 <%= form_for @project, html: {class: "form-horizontal"} do |f| %>
   <% if @project.errors.any? %>
-    <div id= "error_explanation">
-      <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved: </h2>
+    <div class = "row">
+      <div id= "error_explanation", class = "alert alert-danger col-sm-offset-1 col-sm-6" role = "alert">
 
-      <ul>
-        <% @project.errors.full_messages.each do |message| %>
-          <li> <%= message %></li>
-        <% end %>
-      </ul>
+        <h4><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved: </h4>
+
+        <ul>
+          <% @project.errors.full_messages.each do |message| %>
+            <li> <%= message %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
-
-  <div class = "form-group">
-    <%=f.label :name, class: "col-sm-1" %>
-    <div class = "col-sm-4">
-      <%= f.text_field :name, class: "form-control" %>
+  <div class = "row">
+    <div class = "form-group">
+      <%=f.label :name, class: "col-sm-1" %>
+      <div class = "col-sm-4">
+        <%= f.text_field :name, class: "form-control" %>
+      </div>
     </div>
   </div>
 
-  <div class= "form-group">
-    <div class= "actions">
-      <div class= "col-sm-offset-1 col-sm-11">
-        <%= f.submit class: "btn btn-primary" %>
-        <%= link_to "Cancel", projects_path, class: "btn btn-default" %>
+  <div class = "row">
+    <div class= "form-group">
+      <div class= "actions">
+        <div class= "col-sm-offset-1 col-sm-11">
+          <%= f.submit class: "btn btn-primary" %>
+          <%= link_to "Cancel", projects_path, class: "btn btn-default" %>
+        </div>
       </div>
     </div>
   </div>
