--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,19 @@
+<% if notice %>
+  <div class="alert alert-success" role="alert">
+    <p id="flash"><%= notice %></p>
+  </div>
+<% end %>
+
 <div class="page-header">
   <h1>Edit User</h1>
 </div>
 
   <%= render 'form' %>
 
-<div class="form-group">
+<div class="row form-group">
   <div class="actions">
     <div class="col-sm-offset-2 col-sm-7">
-      <div class="well col-md-6">
+      <div class="well col-md-7">
         <center><%= link_to('Delete', user_path, class:"btn btn-danger", method: :delete) %></center>
       </div>
     </div>
