--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
   <div class="actions">
     <div class="col-sm-offset-2 col-sm-7">
       <div class="well col-md-7">
-        <center><%= link_to('Delete', user_path, class:"btn btn-danger", method: :delete) %></center>
+        <center><%= link_to('Delete User', user_path, class:"btn btn-danger", method: :delete) %></center>
       </div>
     </div>
   </div>
