--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,7 +23,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.first_name, user %> <%= link_to user.last_name%></td>
+        <td><%= link_to "#{user.first_name}"+" "+"#{user.last_name}", user%></td>
         <td><%= mail_to user.email %></td>
         <td>
           <div class= "pull-right">
