--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <% if notice %>
   <div class="alert alert-success" role="alert">
-    <p id="flash"><%= notice %></p>
+    <div style="text-align: center">
+      <p id="flash"><%= notice %></p>
+    </div>
   </div>
 <% end %>
 
