--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to "#{user.first_name}"+" "+"#{user.last_name}", user%></td>
+        <td><%= link_to "#{user.first_name}"+" "+"#{user.last_name}", user, id:"user#{user.id}-show-action"%></td>
         <td><%= mail_to user.email %></td>
         <td>
           <div class= "pull-right">
